Fix so we don't get horizontal scroll bars. This only affects narrow displays (<800px).
git-svn-id: https://svn.oucs.ox.ac.uk/projects/vle/sakai/local-skins/trunk@5073 e89cd93b-24fb-0310-854f-f458afca6a80

--- a/src/webapp/weblearn-beta/portal.css
+++ b/src/webapp/weblearn-beta/portal.css
@@ -180,6 +180,7 @@ that can be used or hidden,can also use a background:url(images/<image name>.<ex
 #mastBanner{
 	vertical-align: top;
 	background:  url("images/squares.jpg") no-repeat 710px 0px;
+	overflow: hidden;
 }
 
 /*the portal outputs an image that can be treated here or hidden with display:none*/
